--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,31 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: rgb(30, 7, 7);
+}
+
+.titulo {
+  color: rgb(255, 255, 255);
+  font-size: 2em;
+  font-family: "Lato", sans-serif;
+  text-align: center;
+  margin-top: 1em;
+}
+
+.row {
+  margin-top: 1em;
+}
+
+.btn-color {
+  background-color: rgb(220, 86, 86);
+  border-color: rgb(220, 86, 86);
+  border-radius: 15px;
+  padding: 0.5em;
+  font-size: 1em;
+  font-family: "Lato", sans-serif;
+  width: 100%;
+}
+
+.btn-color:hover {
+  background-color: rgb(220, 86, 86);
+  border-color: rgb(220, 86, 86);
+  color: rgb(15, 4, 4);
+}
