--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,38 +3,60 @@
     <h1 class="titulo">CALCULADORA BMI</h1>
     <div class="row">
       <div class="col-lg-6">
+        <div class="item-bg" [ngClass]="{ 'sexoDesact': sexo === 'F' }">
+          <div class="container" style="cursor:pointer" (click)="masculino()">
+            <i class="fa-solid fa-mars sexo"></i>
+            <p>Masculino</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="item-bg" [ngClass]="{ 'sexoDesact': sexo === 'M' }">
+          <div class="container" style="cursor:pointer" (click)="femenino()">
+            <i class="fa-solid fa-venus sexo"></i>
+            <p>Femenino</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 ">
         <div class="item-bg">
-          1
+          <p>Altura</p>
+          <div class="numero">{{altura}}<span class="cm">cm</span></div>
+          <input type="range" (input)="mudarAltura($event)" [value]="altura" min="120" max="220" class="form-range">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="item-bg">
+          <p class="peso-edad">Peso</p>
+          <div class="numero">
+            {{peso}}
+          </div>
+          <div>
+            <i class="fa-solid fa-minus resta-suma" (click)="peso = peso - 1"></i>
+            <i class="fa-solid fa-plus resta-suma" (click)="peso = peso + 1"></i>
+          </div>
         </div>
       </div>
       <div class="col-lg-6">
         <div class="item-bg">
-          2
+          <p class="peso-edad">Edad</p>
+          <div class="numero">
+            {{edad}}
+          </div>
+          <div>
+            <i class="fa-solid fa-minus resta-suma" (click)="edad = edad - 1"></i>
+            <i class="fa-solid fa-plus resta-suma" (click)="edad = edad + 1"></i>
+          </div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <div class="item-bg">
-          3
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="item-bg">
-          1
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="item-bg">
-          2
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <button class="btn btn-primary btn-lg btn-block btn-color">
+        <button (click)="calcularBMI()" class="btn btn-primary btn-lg btn-block btn-color">
           Calcular
         </button>
       </div>
