--- a/src/app/components/resultado/resultado.component.html
+++ b/src/app/components/resultado/resultado.component.html
@@ -1,1 +1,20 @@
-<p>resultado works!</p>
+<div class="row">
+  <div class="col-lg-4 offset-lg-4">
+    <h2 class="titulo">RESULTADO</h2>
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="item-bg">
+          <div class="container text-center pt-5">
+            <p class="resultado">{{resultado}}</p>
+            <p class="numero">{{bmi}}</p>
+            <p class="interpretacao">{{interpretacao}}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <button routerLink="/" class="btn btn-primary btn-lg btn-color">RECALCULAR</button>
+      </div>
+    </div>
+  </div>
